--- a/judiblog-old/web/newpost.xhtml
+++ b/judiblog-old/web/newpost.xhtml
@@ -9,6 +9,10 @@
         <ui:composition template="./home.xhtml">
 
             <ui:define name="content_sum">
+                <div class=" panel-heading label-primary" style="margin-top:10px">
+                    <b style="text-transform: uppercase;font-size: 1.2em;color:white"><span class="glyphicon glyphicon-log-in"> 
+                        </span>&nbsp;News Post</b>&nbsp;
+                </div> 
                 <ui:include src="module/newspost.xhtml"/>
             </ui:define>              
         </ui:composition>
