--- a/judiblog-old/web/module/infor-user.xhtml
+++ b/judiblog-old/web/module/infor-user.xhtml
@@ -15,7 +15,7 @@
                 <div class=" panel-heading label-success" style="margin:10px">
                     <b style="text-transform: uppercase;font-size: 1.2em;color:white">Hello &nbsp; #{loginBean.user.userName}
                     </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <h:commandButton  action="#{logoutBean.logout()}" class="btn btn-flickr btn-xs" style="" value="Logout"/>
+                    <h:commandButton  action="#{loginBean.logout()}" class="btn btn-flickr btn-xs" style="" value="Logout"/>
                 </div> 
                 <div class="col-md-12 panel-body" style="background-color:#f8f8f8">
 
