--- a/judiblog-old/web/registation.xhtml
+++ b/judiblog-old/web/registation.xhtml
@@ -8,7 +8,7 @@
         <ui:composition template="./home.xhtml">
 
             <ui:define name="content_sum">
-                <ui:include src="module/registy.xhtml"/>
+                <ui:include src="module/registation.xhtml"/>
             </ui:define>
 
         </ui:composition>
