--- a/trunk/judiblog-old/web/module/newspost.xhtml
+++ b/trunk/judiblog-old/web/module/newspost.xhtml
@@ -46,7 +46,7 @@
         <div class="col-md-12" style="margin-bottom: 5px">
             <div class="col-md-1"><b>Upload</b></div>
             <div class="col-md-11">
-                <h:inputFile id="file" value="a"/>
+                <h:inputFile id="file" value=""/>
             </div>
         </div>
         <div class="col-md-12" style="margin-bottom: 5px">
