--- a/judiblog-old/web/module/about.xhtml
+++ b/judiblog-old/web/module/about.xhtml
@@ -13,7 +13,8 @@
         <div  class="col-md-12" style="margin-top: 10px">
             <div class="col-md-6">
                 <div class="panel panel-heading" style="background-color:#086bb0">
-                    <b style="text-transform: uppercase;font-size: 1.2em;color:white"><span class="glyphicon glyphicon-bookmark"></span>&nbsp;ur Team</b>
+                    <b style="text-transform: uppercase;font-size: 1.2em;color:white">
+                        <span class="glyphicon glyphicon-bookmark"></span>&nbsp;us Team</b>
                 </div>
                 <div class="panel panel-body">
                     <center>
@@ -31,7 +32,8 @@
             </div>
             <div class="col-md-6">
                 <div class="panel panel-heading" style="background-color:#086bb0">
-                    <b style="text-transform: uppercase;font-size: 1.2em;color:white"><span class="glyphicon glyphicon-bookmark"></span>&nbsp;Template</b>
+                    <b style="text-transform: uppercase;font-size: 1.2em;color:white">
+                        <span class="glyphicon glyphicon-bookmark"></span>&nbsp;my Template</b>
                 </div>
 
                 <div class="panel-group" id="accordion">
