--- a/judiblog-old/web/module/profile-user.xhtml
+++ b/judiblog-old/web/module/profile-user.xhtml
@@ -22,7 +22,7 @@
                         <div class="col-md-12" style="margin-bottom:10px ">
                             <div class="col-md-4">Full Name</div>
                             <div class="col-md-8">
-                                <h:inputText  class="form-control" value=""  p:placeholder="#{loginBean.user.fullName}">></h:inputText>
+                                <h:inputText  class="form-control" value=""  p:placeholder="#{loginBean.user.fullName}"></h:inputText>
                             </div>
                         </div>
                         <div class="col-md-12" style="margin-bottom:10px ">
