--- a/judiblog-old/web/module/login.xhtml
+++ b/judiblog-old/web/module/login.xhtml
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-md-12 ">
                     <h:commandButton  action="#{loginBean.checkLogin()}" class="btn btn-danger col-md-4" style="margin:10px" value="Login"/>
-                    <a href="registy.jsf" class="btn btn-primary col-md-4" style="margin:10px">Sign Up</a>
+                    <a href="registation.jsf" class="btn btn-primary col-md-4" style="margin:10px">Sign Up</a>
                 </div>
             </h:form>
         </div>  
