--- a/judiblog-old/web/module/registation.xhtml
+++ b/judiblog-old/web/module/registation.xhtml
@@ -23,7 +23,7 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Username:</div>
                             <div class="col-md-6">
-                                <h:inputText  value="" id="username" class="form-control" p:placeholde="abc">
+                                <h:inputText  value="" id="username" class="form-control" p:placeholder="Insert Username">
                                     <f:validateLength minimum="5" maximum="10" />
                                 </h:inputText>
                             </div>
@@ -35,12 +35,12 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Password</div>
                             <div class="col-md-3">
-                                <h:inputSecret   value="" id="password" class="form-control">
+                                <h:inputSecret   value="" id="password" class="form-control" p:placeholder="Insert password">
                                     <f:validateLength minimum="5" />
                                 </h:inputSecret>
                             </div>
                             <div class="col-md-3">
-                                <h:inputSecret   value="" id="re_password" class="form-control">
+                                <h:inputSecret   value="" id="re_password" class="form-control" p:placeholder="Re-Password">
                                     <f:validateLength minimum="5" maximum="10" />
                                 </h:inputSecret>
                             </div>
@@ -52,7 +52,7 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Fullname</div>
                             <div class="col-md-6">
-                                <h:inputText  value="" id="fullname" class="form-control">
+                                <h:inputText  value="" id="fullname" class="form-control" p:placeholder="Insert Fullname">
                                     <f:validateLength minimum="5" maximum="10" />
                                 </h:inputText>
                             </div>
@@ -64,7 +64,7 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Email</div>
                             <div class="col-md-6">
-                                <h:inputText   value="" id="email" class="form-control">
+                                <h:inputText   value="" id="email" class="form-control" p:placeholder="Insert Email" >
                                     <f:validateLength minimum="5" maximum="10" />
                                 </h:inputText>
                             </div>
@@ -93,7 +93,7 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Id Card</div>
                             <div class="col-md-6">
-                                <h:inputText  value="" id="idcard" class="form-control">
+                                <h:inputText  value="" id="idcard" class="form-control" p:placeholder="Id Card">
                                     <f:validateLength minimum="5" maximum="10" />
                                 </h:inputText>
                             </div>
@@ -105,7 +105,7 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Address</div>
                             <div class="col-md-6">
-                                <h:inputText  value="" id="address" class="form-control">
+                                <h:inputText  value="" id="address" class="form-control" p:placeholder="Insert Address">
                                     <f:validateLength minimum="5" maximum="10" />
                                 </h:inputText>
                             </div>
@@ -117,7 +117,7 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Phone</div>
                             <div class="col-md-6">
-                                <h:inputText  value="" id="phone" class="form-control">
+                                <h:inputText  value="" id="phone" class="form-control" p:placeholder="Phone">
                                     <f:validateLength minimum="5" maximum="10" />
                                 </h:inputText>
                             </div>
@@ -129,7 +129,7 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Birthday</div>
                             <div class="col-md-6">
-                                <h:inputText class="datetimepicker  form-control" value="" id="birthday" p:placeholder="">
+                                <h:inputText class="datetimepicker  form-control" value="" id="birthday" p:placeholder="Birthday">
                                     <f:convertDateTime pattern="dd/MM/yyyy" />
                                 </h:inputText>
                             </div>
