--- a/trunk/judiblog-old/web/module/infor-user.xhtml
+++ b/trunk/judiblog-old/web/module/infor-user.xhtml
@@ -27,6 +27,7 @@
                     <div class="col-md-12 ">
                         <a href="newpost.jsf" class="btn btn-primary " style="margin:10px">New Post</a>
                         <a href="profile-user.jsf" class="btn btn-primary " style="margin:10px">Edit Profile </a>
+                        <a href="create-project.jsf" class="btn btn-primary " style="margin:10px">Create Project </a>
                     </div>
 
                 </div>   
