--- a/judiblog-old/web/module/registation.xhtml
+++ b/judiblog-old/web/module/registation.xhtml
@@ -23,8 +23,8 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Username:</div>
                             <div class="col-md-6">
-                                <h:inputText  value="" id="username" class="form-control" p:placeholder="Insert Username">
-                                    <f:validateLength minimum="5" maximum="10" />
+                                <h:inputText  value="#{signupBean.user.userName}" id="username" class="form-control" p:placeholder="Insert Username">
+                                    <f:validateLength minimum="4" maximum="10" />
                                 </h:inputText>
                             </div>
                             <div class="col-md-4">
@@ -35,12 +35,12 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Password</div>
                             <div class="col-md-3">
-                                <h:inputSecret   value="" id="password" class="form-control" p:placeholder="Insert password">
+                                <h:inputSecret   value="#{signupBean.user.pwd}" id="password" class="form-control" p:placeholder="Insert password">
                                     <f:validateLength minimum="5" />
                                 </h:inputSecret>
                             </div>
                             <div class="col-md-3">
-                                <h:inputSecret   value="" id="re_password" class="form-control" p:placeholder="Re-Password">
+                                <h:inputSecret   value="#{signupBean.user.pwd}" id="re_password" class="form-control" p:placeholder="Re-Password">
                                     <f:validateLength minimum="5" maximum="10" />
                                 </h:inputSecret>
                             </div>
@@ -52,8 +52,8 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Fullname</div>
                             <div class="col-md-6">
-                                <h:inputText  value="" id="fullname" class="form-control" p:placeholder="Insert Fullname">
-                                    <f:validateLength minimum="5" maximum="10" />
+                                <h:inputText  value="#{signupBean.user.fullName}" id="fullname" class="form-control" p:placeholder="Insert Fullname">
+                                    <f:validateLength minimum="5" maximum="20" />
                                 </h:inputText>
                             </div>
                             <div class="col-md-4">
@@ -64,8 +64,8 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Email</div>
                             <div class="col-md-6">
-                                <h:inputText   value="" id="email" class="form-control" p:placeholder="Insert Email" >
-                                    <f:validateLength minimum="5" maximum="10" />
+                                <h:inputText   value="#{signupBean.user.email}" id="email" class="form-control" p:placeholder="Insert Email" >
+                                    <f:validateLength minimum="5" maximum="30" />
                                 </h:inputText>
                             </div>
                             <div class="col-md-4">
@@ -76,7 +76,7 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Gender</div>
                             <div class="col-md-2">
-                                <h:selectOneRadio >
+                                <h:selectOneRadio value="#{signupBean.user.gender}">
                                     <f:selectItem itemValue="1" itemLabel="&nbsp;Male" />
                                 </h:selectOneRadio>
                             </div>
@@ -93,7 +93,7 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Id Card</div>
                             <div class="col-md-6">
-                                <h:inputText  value="" id="idcard" class="form-control" p:placeholder="Id Card">
+                                <h:inputText  value="#{signupBean.user.idCard}" id="idcard" class="form-control" p:placeholder="Id Card">
                                     <f:validateLength minimum="5" maximum="10" />
                                 </h:inputText>
                             </div>
@@ -105,8 +105,8 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Address</div>
                             <div class="col-md-6">
-                                <h:inputText  value="" id="address" class="form-control" p:placeholder="Insert Address">
-                                    <f:validateLength minimum="5" maximum="10" />
+                                <h:inputText  value="#{signupBean.user.address}" id="address" class="form-control" p:placeholder="Insert Address">
+                                    <f:validateLength minimum="5" maximum="30" />
                                 </h:inputText>
                             </div>
                             <div class="col-md-4">
@@ -117,7 +117,7 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Phone</div>
                             <div class="col-md-6">
-                                <h:inputText  value="" id="phone" class="form-control" p:placeholder="Phone">
+                                <h:inputText  value="#{signupBean.user.phone}" id="phone" class="form-control" p:placeholder="Phone">
                                     <f:validateLength minimum="5" maximum="10" />
                                 </h:inputText>
                             </div>
@@ -129,8 +129,8 @@
                         <div class="col-md-12" style="margin-bottom: 5px">
                             <div class="col-md-2" style="font-weight: bold">Birthday</div>
                             <div class="col-md-6">
-                                <h:inputText class="datetimepicker  form-control" value="" id="birthday" p:placeholder="Birthday">
-                                    <f:convertDateTime pattern="dd/MM/yyyy" />
+                                <h:inputText class="datetimepicker  form-control" value="#{signupBean.user.birthday}" id="birthday" p:placeholder="Birthday">
+                                    <f:convertDateTime pattern="yyyy/MM/dd" />
                                 </h:inputText>
                             </div>
                         </div>
@@ -139,7 +139,7 @@
                         </div>
 
                         <div class="col-md-12" style="margin-bottom: 5px">
-                            <h:commandButton value="Registy"  class=" col-md-2 col-md-offset-2 btn btn-primary"/> 
+                            <h:commandButton value="Registy"  action="#{signupBean.createrUser()}" class=" col-md-2 col-md-offset-2 btn btn-primary"/> 
                             <h:commandButton value="Reset"  class=" col-md-2 col-md-offset-2 btn btn-danger"/> 
                         </div>
                     </h:form>
