--- a/trunk/judiblog-old/web/admin/navigation.xhtml
+++ b/trunk/judiblog-old/web/admin/navigation.xhtml
@@ -81,7 +81,15 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#"><i class="fa fa-file fa-fw"></i> Project Management</a>
+                                <a href="#"><i class="fa fa-file fa-fw"></i> Project Management<span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                    <li>
+                                        <h:link value="All Project" outcome="project-manager"></h:link>
+                                    </li>
+                                    <li>
+                                        <h:link value="New Project" outcome="add-edit-project"></h:link>
+                                    </li>
+                                </ul>
                             </li>
                             <li>
                                 <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
