--- a/judiblog-old/web/create-project.xhtml
+++ b/judiblog-old/web/create-project.xhtml
@@ -9,7 +9,7 @@
         <ui:composition template="./home.xhtml">
 
             <ui:define name="content_sum">
-                <ui:include src="module/post-project.xhtml"/>
+                <ui:include src="member/post-project.xhtml"/>
             </ui:define>
 
         </ui:composition>
