--- a/judiblog-old/web/module/infor-user.xhtml
+++ b/judiblog-old/web/module/infor-user.xhtml
@@ -25,9 +25,10 @@
                         </center>
                     </div>
                     <div class="col-md-12 ">
-                        <a href="newpost.jsf" class="btn-primary btn-xs " style="margin:5px">New Post</a>
-                        <a href="profile-user.jsf" class="btn-primary btn-xs" style="margin:5px">Edit Profile </a>
-                        <a href="create-project.jsf" class="btn-primary btn-xs" style="margin:5px">Create Project </a>
+                        <a href="newpost.jsf" class="btn btn-primary " style="margin:10px">New Post</a>
+                        <a href="profile-user.jsf" class="btn btn-primary " style="margin:10px">Edit Profile </a>
+                        <a href="/Judi-blog/member/create-project.xhtml" class="btn btn-primary " style="margin:10px">Create Project </a>
+
                     </div>
 
                 </div>   
