[navigation.xhtml][update][update]

--- a/judiblog-old/web/admin/navigation.xhtml
+++ b/judiblog-old/web/admin/navigation.xhtml
@@ -87,7 +87,7 @@
                                         <h:link value="All Project" outcome="project-manager"></h:link>
                                     </li>
                                     <li>
-                                        <h:link value="New Project" outcome="add-edit-project"></h:link>
+                                        <h:link value="New Project" outcome="add-project"></h:link>
                                     </li>
                                 </ul>
                             </li>
