[Support.java] [edit] [add method]

--- a/judiblog-old/web/admin/navigation.xhtml
+++ b/judiblog-old/web/admin/navigation.xhtml
@@ -76,7 +76,7 @@
                                         <h:link value="All post" outcome="post-manager"></h:link>
                                     </li>
                                     <li>
-                                        <h:link value="New post" outcome="post-manager"></h:link>
+                                        <h:link value="New post" outcome="new-post"></h:link>
                                     </li>
                                 </ul>
                             </li>
